[gd_scene load_steps=23 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/gorilla/RUN/sprite_1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/gorilla/RUN/sprite_3.png" type="Texture" id=3]
[ext_resource path="res://stateMachine.gd" type="Script" id=4]
[ext_resource path="res://Sprites/gorilla/RUN/sprite_2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/gorilla/RUN/sprite_4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/gorilla/IDLE/sprite_1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/gorilla/IDLE/sprite_0.png" type="Texture" id=8]
[ext_resource path="res://Sprites/gorilla/DANCE/sprite_0.png" type="Texture" id=9]
[ext_resource path="res://Sprites/gorilla/JUMP/sprite_2.png" type="Texture" id=10]
[ext_resource path="res://Sprites/gorilla/JUMP/sprite_1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/gorilla/JUMP/sprite_3.png" type="Texture" id=12]
[ext_resource path="res://Sprites/gorilla/ATTACK/sprite_5.png" type="Texture" id=13]
[ext_resource path="res://Sprites/gorilla/DANCE/sprite_1.png" type="Texture" id=14]
[ext_resource path="res://Sprites/gorilla/ATTACK/sprite_2.png" type="Texture" id=15]
[ext_resource path="res://Sprites/gorilla/ATTACK/sprite_4.png" type="Texture" id=16]
[ext_resource path="res://Sprites/gorilla/ATTACK/sprite_3.png" type="Texture" id=17]
[ext_resource path="res://Sprites/gorilla/ATTACK/sprite_0.png" type="Texture" id=18]
[ext_resource path="res://Sprites/gorilla/ATTACK/sprite_1.png" type="Texture" id=19]
[ext_resource path="res://attackStateMachine.gd" type="Script" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": true,
"name": "run",
"speed": 9.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 13 ) ],
"loop": false,
"name": "attack",
"speed": 12.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 10 ) ],
"loop": false,
"name": "jump",
"speed": 12.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 14 ) ],
"loop": true,
"name": "dance",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": false,
"name": "wall",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 14 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="stateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="attackStateMachine" type="Node" parent="."]
script = ExtResource( 20 )

[node name="body" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="body"]
position = Vector2( -1, -0.905531 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="ground_rays" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="ground_rays"]
position = Vector2( 10, 14 )
enabled = true
cast_to = Vector2( 0, 7 )
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="ground_rays"]
position = Vector2( -9, 14 )
enabled = true
cast_to = Vector2( 0, 7 )
collision_mask = 2

[node name="RayCast2D3" type="RayCast2D" parent="ground_rays"]
position = Vector2( 0, 14 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="wall_rays_left" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="wall_rays_left"]
position = Vector2( 12, -7 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="wall_rays_left"]
position = Vector2( 12, 8 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 2

[node name="wall_rays_right" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="wall_rays_right"]
position = Vector2( -12, -7 )
enabled = true
cast_to = Vector2( -1, 0 )
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="wall_rays_right"]
position = Vector2( -12, 8 )
enabled = true
cast_to = Vector2( -1, 0 )
collision_mask = 2

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -14.0
margin_top = 15.0
margin_right = 41.0
margin_bottom = 48.0
text = "salut"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = -18.0
margin_top = -27.0
margin_right = 35.0
margin_bottom = 6.0
text = "wddw"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
[connection signal="animation_finished" from="body/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
